# ApodGallery

ApodGallery/: CMakeLists.txt  Main.qml  apodresponsedto.cpp  apodresponsedto.h  imageelement.cpp  imageelement.h  main.cpp
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appapodgallery_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appApodGallery.cmake
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appApodGallery.cmake  Qt6_QmlPlugins_Imports_appApodGallery.rsp
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appApodGallery_raw_qml_0.qrc  qmake_ApodGallery.qrc  qrc_qmake_ApodGallery.cpp
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/qmlcache/: appApodGallery_Main_qml.cpp  (+2 more)
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/ApodGallery/: Main.qml  appApodGallery.qmltypes  appApodGallery_qml_module_dir_map.qrc  qmldir
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appApodGallery_autogen/: deps  mocs_compilation.cpp
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/meta_types/: appApodGallery_json_file_list.txt  appApodGallery_json_file_list.txt.timestamp  qt6appapodgallery_debug_metatypes.json
build-ApodGallery-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/qmltypes/: appApodGallery_foreign_types.txt
(+445 files in other folders)
